account for overflow in menu (fixes #142)

--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -1,10 +1,17 @@
 footer.main {
+  @include position(fixed, null null 0 0);
+  width: rem(250);
+  padding: rem(10) rem(15);
+  box-sizing: border-box;
 
   > a {
-    @include position(fixed, null null rem(10) rem(15));
     img, svg {
       width: rem(100);
     }
   }
 
+}
+
+#container.sidebar + footer.main {
+  background: $light;
 }
